tdf#61996 Skip quoted text in number format

Quoted text should be detected and skiped
before detecting conditions

Change-Id: I1c78fed7f543fb335fbb8ec9ed50d9ab9dd10aa7